src/objects/MetroclientTierSystemLevel__c.object
<CustomObject>
    <description>Metroclient Product Catalog - Levels within the tier systems.</description>
    <fields>
        <fullName>LevelRank__c</fullName>
        <description>Rank of the level within in the tier system</description>
        <inlineHelpText>Rank of the level within in the tier system</inlineHelpText>
        <label>Level Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCatalogTierId__c</fullName>
        <description>It is the 18 digit version of the record&apos;s SFDC Id used by the Zuora product catalog.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 character unique id used by Zuora as the &quot;Record Id&quot; that associates tiered pricing product rate plan charges with the tier system level.</inlineHelpText>
        <label>Product Catalog Tier Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SandboxId_DNU__c</fullName>
        <label>Sandbox Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TierSystem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tier System</label>
        <referenceTo>MetroclientTierSystem__c</referenceTo>
        <relationshipName>MetroclientTierSystemLevelTierSystem</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Metrostudy Tier System Level</label>
    <listViews>
        <fullName>All</fullName>
        <columns>TierSystem__c</columns>
        <columns>NAME</columns>
        <columns>LevelRank__c</columns>
        <columns>ProductCatalogTierId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Multi_Level</fullName>
        <columns>TierSystem__c</columns>
        <columns>NAME</columns>
        <columns>ProductCatalogTierId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>single</value>
        </filters>
        <label>Multi Level</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Single_Level</fullName>
        <columns>NAME</columns>
        <columns>TierSystem__c</columns>
        <columns>ProductCatalogTierId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>single</value>
        </filters>
        <label>Single Level</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Tier Level</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrostudy Tier System  Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>